Config k8s-extension for generating manifests: Set the proper values in conf for using the PVC in the pod and the `latest` tag for the image

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -126,6 +126,7 @@ quarkus.kubernetes.expose=true
 quarkus.container-image.group=snowdrop
 quarkus.container-image.name=snowdrop-bot
 quarkus.container-image.registry=quay.io
+quarkus.container-image.tag=latest
 
 # Kubernetes specific resources
 quarkus.kubernetes.part-of=snowdrop-bot
@@ -134,8 +135,8 @@ quarkus.kubernetes.env-vars.snowdrop-jira.secret=snowdrop-jira
 quarkus.kubernetes.env-vars.snowdrop-associates.secret=snowdrop-associates
 
 # Mount PVC volume
-#quarkus.kubernetes.pvc-volumes.snowdrop-db.claim-name=snowdrop-db-claim
-#quarkus.kubernetes.mounts.snowdrop-db.path=/z/var/snowdrop-bot/data/prod
+quarkus.kubernetes.pvc-volumes.snowdrop-bot-storage.claim-name=snowdrop-bot-claim
+quarkus.kubernetes.mounts.snowdrop-bot-storage.path=/data
 
 # Openshift specific resources
 quarkus.openshift.part-of=snowdrop-bot
